- bug strings.xml, cart currency format update

--- a/app/src/main/res/layout/activity_app_settings_page.xml
+++ b/app/src/main/res/layout/activity_app_settings_page.xml
@@ -32,7 +32,7 @@
         android:layout_height="96dp"
         android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
@@ -61,7 +61,7 @@
         android:layout_height="26dp"
         android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
-        android:text="Change your app settings."
+        android:text="@string/change_your_app_settings"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -90,7 +90,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.2"
-        android:text="App Settings"
+        android:text="@string/app_settings"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
@@ -108,7 +108,7 @@
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.2"
         android:paddingStart="5dp"
-        android:text="Security"
+        android:text="@string/security"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -127,7 +127,7 @@
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.2"
         android:paddingStart="5dp"
-        android:text="Notifications"
+        android:text="@string/notifications"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -181,7 +181,7 @@
         android:fontFamily="@font/sofia_regular"
         android:paddingStart="30dp"
         android:paddingTop="12dp"
-        android:text="Biometrics Unlock"
+        android:text="@string/biometrics_unlock"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
@@ -199,7 +199,7 @@
         android:fontFamily="@font/sofia_regular"
         android:paddingStart="30dp"
         android:paddingTop="12dp"
-        android:text="Inbox Messages"
+        android:text="@string/inbox_messages"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
@@ -236,7 +236,7 @@
         android:fontFamily="@font/sofia_regular"
         android:foreground="@drawable/ripple_grayc1c1"
         android:paddingStart="30dp"
-        android:text="Application Terms"
+        android:text="@string/application_terms"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
@@ -281,7 +281,7 @@
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
-        android:text="Back"
+        android:text="@string/back"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/whiteBox3"
@@ -335,7 +335,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/app_terms_text_box"
         app:layout_constraintEnd_toEndOf="@+id/app_terms_text_box"
         app:layout_constraintTop_toTopOf="@+id/app_terms_text_box"
-        app:srcCompat="@drawable/contact" />
+        app:srcCompat="@drawable/contact"
+        android:contentDescription="@string/todo" />
 
     <ImageView
         android:id="@+id/help_icon"
