--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="Order now!"
+                android:text="@string/order_now_txt"
                 android:textColor="#000000"
                 android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="@+id/order_now_box"
@@ -112,7 +112,7 @@
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="Try our new Americano Coffee today!"
+                android:text="@string/try_our_new_americano_coffee_today"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/order_now_box"
@@ -141,7 +141,8 @@
                 app:layout_constraintEnd_toEndOf="@+id/order_now_box"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="@+id/order_now_box"
-                app:layout_constraintTop_toBottomOf="@+id/order_now2" />
+                app:layout_constraintTop_toBottomOf="@+id/order_now2"
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <Button
                 android:id="@+id/testRewardsButton"
@@ -260,7 +261,7 @@
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="Account Settings"
+                android:text="@string/account_settings"
                 android:textColor="#000000"
                 android:textSize="25sp"
                 android:visibility="invisible"
@@ -276,7 +277,7 @@
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="Finnish settings up your account!"
+                android:text="@string/finnish_settings_up_your_account"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:visibility="invisible"
@@ -417,7 +418,7 @@
                 android:background="@drawable/settings_page_all_white_curved_corners"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="points collected!"
+                android:text="@string/points_collected_txt2"
                 android:textColor="#000000"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="@+id/rewards_white_box_top"
@@ -496,12 +497,13 @@
         android:onClick="inboxPage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MenuRedBox"
-        app:srcCompat="@drawable/mail" />
+        app:srcCompat="@drawable/mail"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/saved_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="80dp"
         android:foreground="@drawable/ripple_red_25_corners"
@@ -516,7 +518,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/sofia_regular"
-        android:text="Inbox"
+        android:text="@string/inbox3"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:letterSpacing="0.2"
@@ -530,7 +532,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.2"
-        android:text="History"
+        android:text="@string/history"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/saved_icon"
