--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -27,7 +27,7 @@
         android:layout_height="96dp"
         android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
-        android:text="Menu"
+        android:text="@string/menu"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
@@ -41,7 +41,7 @@
         android:layout_height="26dp"
         android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
-        android:text="Choose your drink"
+        android:text="@string/choose_your_drink"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -82,7 +82,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:onClick="goToCartButton"
-        android:text=" Go to Cart "
+        android:text="@string/go_to_cart"
         android:letterSpacing="0.25"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
@@ -116,7 +116,7 @@
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
-        android:text="  Rewards  "
+        android:text="@string/rewards"
         android:textColor="@color/white"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
