--- a/app/src/main/res/layout/activity_order_menu_page.xml
+++ b/app/src/main/res/layout/activity_order_menu_page.xml
@@ -108,6 +108,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/sofia_regular"
         android:text="Nutrition"
+        android:onClick="nutritionButton"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:background="@drawable/profile_page_all_curved_corners_red"
