--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -250,6 +250,7 @@
                 android:text="   example page   "
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:backgroundTint="@color/red_ec"
                 app:layout_constraintTop_toBottomOf="@+id/account_box"
                 tools:layout_editor_absoluteX="105dp" />
