-Fixed User Rewards Bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,7 +161,7 @@
                 android:paddingBottom="0dp"
                 android:text="  Increment  "
                 android:textColor="#FFFFFF"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@color/red_ec"
                 app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
                 app:layout_constraintHorizontal_bias="0.893"
@@ -210,7 +210,7 @@
                 android:paddingBottom="0dp"
                 android:text="  Decr  "
                 android:textColor="#FFFFFF"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@color/red_ec"
                 app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
                 app:layout_constraintHorizontal_bias="0.071"
