-Added note for when adding payment clarity for exp. date format. MM/YY

--- a/app/src/main/res/layout/activity_payment_method1.xml
+++ b/app/src/main/res/layout/activity_payment_method1.xml
@@ -231,7 +231,7 @@
                 android:background="#CCFFFFFF"
                 android:ems="10"
                 android:fontFamily="@font/sofia_regular"
-                android:hint="Exp"
+                android:hint="Exp: MM/YY"
                 android:inputType="phone"
                 android:maxLength="5"
                 android:padding="10dp"
