closes #102 used consistent langauge

--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -42,7 +42,7 @@
         android:layout_height="96dp"
         android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
-        android:text="@string/order_text"
+        android:text="Cart"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
@@ -69,7 +69,7 @@
         android:layout_height="26dp"
         android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
-        android:text="@string/review_your_order"
+        android:text="Review your items"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -91,7 +91,7 @@
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
-        android:text="  Place Order  "
+        android:text="  Check out  "
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox1"
@@ -116,7 +116,7 @@
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
-        android:text=" Order More "
+        android:text=" Add More "
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintEnd_toEndOf="@+id/menuWhiteBox1"
@@ -155,7 +155,7 @@
         android:id="@+id/cart_cost_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Total Cost"
+        android:text="Total Cost:"
         app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox1"
         app:layout_constraintEnd_toEndOf="@+id/menuWhiteBox1"
         app:layout_constraintHorizontal_bias="0.495"
