--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -58,6 +58,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
         android:onClick="backButton"
+        android:visibility="invisible"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
