--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -180,7 +180,7 @@
 
     <TextView
         android:id="@+id/verifyMsg"
-        android:layout_width="363dp"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/sofia_regular"
@@ -195,13 +195,13 @@
 
     <Button
         android:id="@+id/resendCode"
-        android:layout_width="139dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
         android:background="@drawable/profile_page_all_curved_corners_red"
         android:backgroundTint="@color/red_ec"
         android:foreground="@drawable/ripple_grayc1c1"
 
-        android:text="resendCode"
+        android:text="  Resend Code  "
         android:textColor="@color/black"
         android:visibility="invisible"
         app:backgroundTint="@color/red_ec"
