--- a/index.css
+++ b/index.css
@@ -24,10 +24,14 @@ h2 {
     font-size: 1.8rem;
     font-weight: 400;
     font-style: italic;
+    color: #631818;
 }
 
+p {
+    margin: 15px 60px;
+}
 .appHeader {
     width: 100%;
     background-color: #631818;
-    height: 15%;
+    height: 30%;
 }
