--- a/index.css
+++ b/index.css
@@ -35,3 +35,17 @@ p {
     background-color: #631818;
     height: 30%;
 }
+
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
