--- a/index.css
+++ b/index.css
@@ -27,6 +27,13 @@ h2 {
     color: #631818;
 }
 
+h3 {
+    font-size: 100;
+    font-weight: 400;
+    font-style: italic;
+    color: #631818;
+}
+
 p {
     margin: 15px 60px;
 }
