Order History is now fixed. History will now display all orders placed starting from this update. Previous orders prior to this update will not be shown.
closes #101

--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -113,7 +113,7 @@
         app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox"
         app:layout_constraintStart_toStartOf="@+id/whiteBox"
-        app:layout_constraintTop_toBottomOf="@+id/card_used" />
+        app:layout_constraintTop_toBottomOf="@+id/orderNameAndPrice" />
 
     <TextView
         android:id="@+id/orderNameAndPrice"
